# github-actions-practicum

.github/workflows/: main.yml
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: main.cpp  server.hpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.hpp  json_loader.cpp  json_loader.hpp  json_serializer.cpp  json_serializer.hpp  main.cpp  model.cpp  model.hpp  request_handler.cpp  request_handler.hpp  tagged.hpp
sprint1/problems/final_task/solution/src/util/: error.cpp  error.hpp
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_serializer.cpp  json_serializer.h  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: http_server.cpp  http_server.hpp  json_loader.cpp  json_loader.hpp  main.cpp  request_handler.cpp  request_handler.hpp
sprint2/problems/static_content/solution/src/api_handler/: api_handler.hpp
sprint2/problems/static_content/solution/src/api_handler/endpoints/: endpoint.hpp  endpoints.hpp  fallthrough.hpp
sprint2/problems/static_content/solution/src/api_handler/endpoints/game/: join.hpp  tick.hpp
sprint2/problems/static_content/solution/src/api_handler/endpoints/game/player/: action.hpp  get_players.hpp
sprint2/problems/static_content/solution/src/api_handler/endpoints/game/state/: get_state.hpp
sprint2/problems/static_content/solution/src/api_handler/endpoints/map/: get_map.hpp  get_maps.hpp
sprint2/problems/static_content/solution/src/model/: model.hpp
sprint2/problems/static_content/solution/src/model/domains/: api.cpp  api.hpp  basic.cpp  basic.hpp  game.cpp  game.hpp  map.cpp  map.hpp
sprint2/problems/static_content/solution/src/util/: error.cpp  error.hpp  filesystem.cpp  filesystem.hpp  logging.cpp  logging.hpp  mime_type.cpp  mime_type.hpp  response.cpp  response.hpp  string_hash.hpp  tagged.hpp  ticker.cpp  ticker.hpp
